--- a/_posts/2018-01-17-OpenCL_1.md
+++ b/_posts/2018-01-17-OpenCL_1.md
@@ -38,6 +38,7 @@ typedef struct _cl_device_id *      cl_device_id;
 typedef struct _cl_context *        cl_context;
 typedef struct _cl_command_queue *  cl_command_queue;
 ```
+### 2 Find Host
 To initialize this structure, you need to call `cl_int clGetPlatformIDs(cl_unit, num_entries, cl_platform_id* platform, cl_uint* num_platforms)`
 If return value is negative, this function fails.
 `num_entries` is the maximum number of `cl_platform_id` which will be placed in `platform` array.
@@ -62,3 +63,23 @@ clGetPlatformInfo(cl_platform_id   /* platform */,
 char pform_vendor[40];
 clGetPlatformInfo(platforms[0], CL_PLATFORM_VENDOR, sizeof(pform_vendor), &pform_vendor, NULL);
 ```
+## 3. Find devices
+```
+/* Device APIs */
+extern CL_API_ENTRY cl_int CL_API_CALL
+clGetDeviceIDs(cl_platform_id   /* platform */,
+               cl_device_type   /* device_type */, 
+               cl_uint          /* num_entries */, 
+               cl_device_id *   /* devices */, 
+               cl_uint *        /* num_devices */) CL_API_SUFFIX__VERSION_1_0;
+
+extern CL_API_ENTRY cl_int CL_API_CALL
+clGetDeviceInfo(cl_device_id    /* device */,
+                cl_device_info  /* param_name */, 
+                size_t          /* param_value_size */, 
+                void *          /* param_value */,
+                size_t *        /* param_value_size_ret */) CL_API_SUFFIX__VERSION_1_0;
+```
+
+## 4. Device Management
+In OpenCL, a **context** identifies a set of devices through **command queue**. 
