--- a/_posts/2018-01-17-OpenCL_1.md
+++ b/_posts/2018-01-17-OpenCL_1.md
@@ -83,3 +83,38 @@ clGetDeviceInfo(cl_device_id    /* device */,
 
 ## 4. Device Management
 In OpenCL, a **context** identifies a set of devices through **command queue**. 
+```
+cl_context clCreateContext(const cl_context_properties* properties, cl_unit num_devices, const cl_device_id* devices, 
+(void CL_CALLBACK* notify_func)(...), void* user_data, cl_int* error);
+cl_context clCreateContextFromType(const cl_context_properties* properties, cl_device_type device_type, 
+(void CL_CALLBACK *notify_func)(...), void* user_data, cl_int* error);
+```
+The `user_data` is accessed by the callback function when an error occurs. 
+
+```
+clGetContextInfo(cl_context context, cl_context_info param_name, size_t param_value_size, void* param_value, size_t* param_value_size_ret)
+```
+
+## 5. Storing Device Code in Programs
+A kernel represents a single function to be executed on a device. In OpenCL, a program is represented by a `cl_program` data structure.
+OpenCL provides two functions to create new programs:
+`clCreateProgramWithSource` and `clCreateProgramWithBinary`.
+`clCreateProgramWithSource` function expects the buffer contain code in text form. 
+```
+extern CL_API_ENTRY cl_program CL_API_CALL
+clCreateProgramWithSource(cl_context        /* context */,
+                          cl_uint           /* count */,
+                          const char **     /* strings */,
+                          const size_t *    /* lengths */,
+                          cl_int *          /* errcode_ret */) CL_API_SUFFIX__VERSION_1_0;
+
+extern CL_API_ENTRY cl_program CL_API_CALL
+clCreateProgramWithBinary(cl_context                     /* context */,
+                          cl_uint                        /* num_devices */,
+                          const cl_device_id *           /* device_list */,
+                          const size_t *                 /* lengths */,
+                          const unsigned char **         /* binaries */,
+                          cl_int *                       /* binary_status */,
+                          cl_int *                       /* errcode_ret */) CL_API_SUFFIX__VERSION_1_0;
+```
+To create a program from multiple text files, the content of each file must be placed in an array of strings(`char**`). The `src_num` parameter tells the function how many strings to expect, the `src_sizes` identifies the size of each string.
