--- a/_posts/2018-01-17-OpenCL_1.md
+++ b/_posts/2018-01-17-OpenCL_1.md
@@ -118,3 +118,97 @@ clCreateProgramWithBinary(cl_context                     /* context */,
                           cl_int *                       /* errcode_ret */) CL_API_SUFFIX__VERSION_1_0;
 ```
 To create a program from multiple text files, the content of each file must be placed in an array of strings(`char**`). The `src_num` parameter tells the function how many strings to expect, the `src_sizes` identifies the size of each string.
+You can create one separate text file (`*.cl`).
+```
+program_handle = fopen("kernel.cl", "r");
+fseek(program_handle, 0, SEEK_END);
+program_size = ftell(program_handle);
+rewind(program_handle);
+
+program_buffer = (char*)malloc(program_size + 1);
+program_buffer[program_size] = '\0';
+fread(program_buffer, sizeof(char), program_size, program_handle);
+program = clCreateProgramWithSource(context, 1, (const char**)program_buffer, program_size, &err);
+```
+
+## 6. Compile
+Every compiler must be accessible through `clBuildProgram`. This function compiles and links a `cl_program` for devices associated with the platform. 
+```
+extern CL_API_ENTRY cl_int CL_API_CALL
+clBuildProgram(cl_program           /* program */,
+               cl_uint              /* num_devices */,
+               const cl_device_id * /* device_list */,
+               const char *         /* options */, 
+               void (CL_CALLBACK *  /* pfn_notify */)(cl_program /* program */, void * /* user_data */),
+               void *               /* user_data */) CL_API_SUFFIX__VERSION_1_0;
+```
+```
+const char options[] = "-cl-std=CL1.1 -cl-mad-enable -Werror";
+clBuildProgram(program, 1, &device, options, NULL, NULL);
+```
+```
+
+   /* Access the first GPU/CPU */
+   err = clGetDeviceIDs(platform, CL_DEVICE_TYPE_GPU, 1, &device, NULL);
+   if(err == CL_DEVICE_NOT_FOUND) {
+      err = clGetDeviceIDs(platform, CL_DEVICE_TYPE_CPU, 1, &device, NULL);
+   }
+   if(err < 0) {
+      perror("Couldn't find any devices");
+      exit(1);
+   }
+
+   /* Create a context */
+   context = clCreateContext(NULL, 1, &device, NULL, NULL, &err);
+   if(err < 0) {
+      perror("Couldn't create a context");
+      exit(1);   
+   }
+
+   /* Read each program file and place content into buffer array */
+   for(i=0; i<NUM_FILES; i++) {
+
+      program_handle = fopen(file_name[i], "r");
+      if(program_handle == NULL) {
+         perror("Couldn't find the program file");
+         exit(1);   
+      }
+      fseek(program_handle, 0, SEEK_END);
+      program_size[i] = ftell(program_handle);
+      rewind(program_handle);
+      program_buffer[i] = (char*)malloc(program_size[i]+1);
+      program_buffer[i][program_size[i]] = '\0';
+      fread(program_buffer[i], sizeof(char), program_size[i], 
+            program_handle);
+      fclose(program_handle);
+   }
+
+   /* Create a program containing all program content */
+   program = clCreateProgramWithSource(context, NUM_FILES, 			
+         (const char**)program_buffer, program_size, &err);				
+   if(err < 0) {
+      perror("Couldn't create the program");
+      exit(1);   
+   }
+
+   /* Build program */
+   err = clBuildProgram(program, 1, &device, options, NULL, NULL);		
+   if(err < 0) {
+
+      /* Find size of log and print to std output */
+      clGetProgramBuildInfo(program, device, CL_PROGRAM_BUILD_LOG, 
+            0, NULL, &log_size);
+      program_log = (char*) malloc(log_size+1);
+      program_log[log_size] = '\0';
+      clGetProgramBuildInfo(program, device, CL_PROGRAM_BUILD_LOG, 
+            log_size+1, program_log, NULL);
+      printf("%s\n", program_log);
+      free(program_log);
+      exit(1);
+   }
+   
+   /* Deallocate resources */
+   for(i=0; i<NUM_FILES; i++) {
+      free(program_buffer[i]);
+   }
+```
