openCL 4 git commit -m openCL

--- a/_posts/2018-01-17-OpenCL_1.md
+++ b/_posts/2018-01-17-OpenCL_1.md
@@ -212,3 +212,28 @@ clBuildProgram(program, 1, &device, options, NULL, NULL);
       free(program_buffer[i]);
    }
 ```
+##7. Kernel
+kernels are deployable structure. They can be packed to a command queue and send to a device. `cl_kernel`
+```
+clCreateKernelsInProgram(cl_program program, cl_uint num_kernels, cl_kernel* kernels, cl_uint* num_kernels_ret);
+```
+If you'd rather create a single kernel, you can use the `clCreateKernel` function. This function requires that you know the name of the function from which the kernel is to be created.
+```
+clCreateKernel(cl_program program, const char* kernel_name, cl_int* error);
+```
+Once you've created a `cl_kernel`, you may want to know which function it represents and which program it belongs to. 
+```
+clGetKernelInfo(cl_kernel kernel, cl_kernel_info para_name, size_t param_value_size, void* param_value, size_t* param_value_size_ret);
+```
+## 8. Command queue
+When you create a kernel, you don't have to identify a target device -- it can be sent to any device in the context. Instead, you identify the target device when you create a command queue. Then when you deploy kernels to the queue, they will be sent to the device assocaited with the queue. 
+**A command is a message sent from the host that tells a device to perform an operation.** Besides kernel execution, many OpenCL command operations involve data transfer: reading from the device to the host, writing data from the host to the device. 
+By default, command queues process commands in the order in which they're received, but you can change this defualt. 
+`cl_command_queue`
+```
+clCreateCommandQueue(cl_context context, cl_device_id device, cl_command_queue_properties properties, cl_int *err).
+```
+This returns a `cl_command_queue` whose reference count can be incremented with `clRetainCommandQueue` and decremented with `clReleaseCommandQueue`. 
+```
+clEnqueueTask(cl_command_queue queue, cl_kernel kernel, cl_uint num_events, const cl_event* wait_list, cl_event* event)
+```
