--- a/_posts/2018-01-17-OpenCL_2.md
+++ b/_posts/2018-01-17-OpenCL_2.md
@@ -40,3 +40,47 @@ vec_buff = clCreateBuffer(context, CL_MEM_READ_ONLY | CL_MEM_COPY_HOST_PTR), siz
 ```
 If you're running host applications on a memory-limited system or on the same device that you're using to process kernels, set the `CL_MEM_USE_HOST_PTR` flag. 
 If low memory isn't an issue but reliable data transfer is, set `CL_MEM_COPY_HOST_PTR`. 
+
+### 2.1 Subbuffer
+```
+cl_mem clCreateSubBuffer (  cl_mem buffer,
+  cl_mem_flags flags,
+  cl_buffer_create_type buffer_create_type,
+  const void *buffer_create_info,
+  cl_int *errcode_ret)
+```
+`buffer_create_type` must by `CL_BUFFER_CREATE_TYPE_REGION`, and the fourth arg expects a pointer to a `_cl_buffer_region` structure. 
+```
+typedef struct _cl_buffer_region {
+    size_t origin;
+    size_t size;
+} cl_buffer_region;
+```
+The `origin` field specifies the start of the subbuffer's data inside the buffer. The `size` field defines the size of the buffer. 
+
+## 3. Image Objects
+OpenCL provides a specific type of memory object for holding pixel data. The standard refers to them as **image objects**. 
+```
+cl_mem clCreateImage (  cl_context context,
+  cl_mem_flags flags,
+  const cl_image_format *image_format,
+  const cl_image_desc *image_desc,
+  void *host_ptr,
+  cl_int *errcode_ret)
+```
+```
+typedef struct _cl_image_format {
+          cl_channel_order image_channel_order;
+          cl_channel_type  image_channel_data_type;
+} cl_image_format;
+```
+
+## 4. Info on Buffer Objects
+```
+cl_int clGetMemObjectInfo ( cl_mem  memobj ,
+  cl_mem_info  param_name ,
+  size_t  param_value_size ,
+  void  *param_value ,
+  size_t  *param_value_size_ret )
+```
+The first three arguments provide input: the memory object, a name that identifies the type of data you're requesting, and the amount of data you're requesting. The last two arguments are output arguments, in which the function returns the data you're requesting and the size of the returned data. 
