--- a/_posts/2018-01-17-OpenCL_2.md
+++ b/_posts/2018-01-17-OpenCL_2.md
@@ -84,3 +84,64 @@ cl_int clGetMemObjectInfo ( cl_mem  memobj ,
   size_t  *param_value_size_ret )
 ```
 The first three arguments provide input: the memory object, a name that identifies the type of data you're requesting, and the amount of data you're requesting. The last two arguments are output arguments, in which the function returns the data you're requesting and the size of the returned data. 
+```
+float main_data[100];
+cl_mem main_buffer, sub_buffer;
+void *main_buffer_mem = NULL, *sub_buffer_mem = NULL;
+size_t main_buffer_size, sub_buffer_size;
+cl_buffer_region region;
+...
+main_buffer = clCreateBuffer(context, CL_MEM_READ_ONLY | CL_MEM_COPY_HOST_PTR, sizeof(main_data), main_data, &err);
+if (err < 0) {
+    perror("Couldn't create a buffer\n");
+    exit(1);
+}
+region.origin = 30 * sizeof(float);
+region.size = 20 * sizeof(float);
+sub_buffer = clCreateSubBuffer(main_buffer, CL_MEM_READ_ONLY | CL_MEM_COPY_HOST_PTR, &region, &err);
+if (err < 0) {
+    perror("Couldn't create a sub-buffer\n");
+    exit(1);
+}
+clGetMemObjectInfo(main_buffer, CL_MEM_SIZE, 
+    sizeof(main_buffer_size), &main_buffer_size, NULL);
+clGetMemObjectInfo(sub_buffer, CL_MEM_SIZE, 
+    sizeof(sub_buffer_size), &sub_buffer_size, NULL);
+```
+## 5. Memory Object Transfer
+### 5.1 Read/Write
+To read a buffer object from a device to the host, we can simply call `clEnqueueReadBuffer`.
+```
+clEnqueueReadBuffer(cl_command_queue queue, cl_mem buffer, cl_bool blocking, size_t offset, size_t data_size, void* ptr, cl_uint num_events, const cl_event* wait_list, cl_event* event);
+clEnqueueWriteBuffer(cl_command_queue queue, cl_mem buffer, cl_bool blocking, size_t offset, size_t data_size, void* ptr, cl_uint num_events, const cl_event* wait_list, cl_event* event);
+```
+Each of these functions also have a boolean argument called `blocking`. If this is set to `CL_TRUE`, the function won't return until the read/write operation is finished. 
+### 5.2 Mapping memory objects
+When a regular C/C++ application needs to access a file, it's common to place the file's content in memory and read or modify it using memory operations. This is referred to as **memory-mapping** the file. You can also map a memory object on a device to a memory region on the host. 
+```
+void * clEnqueueMapBuffer (	cl_command_queue command_queue,
+ 	cl_mem buffer,
+ 	cl_bool blocking_map,
+ 	cl_map_flags map_flags,
+ 	size_t offset,
+ 	size_t size,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event,
+ 	cl_int *errcode_ret);
+ 
+void * clEnqueueMapImage (	cl_command_queue  command_queue ,
+ 	cl_mem  image ,
+ 	cl_bool  blocking_map ,
+ 	cl_map_flags  map_flags ,
+ 	const size_t  * origin ,
+ 	const size_t  * region ,
+ 	size_t  *image_row_pitch ,
+ 	size_t  *image_slice_pitch ,
+ 	cl_uint  num_events_in_wait_list ,
+ 	const cl_event  *event_wait_list ,
+ 	cl_event  *event ,
+ 	cl_int  *errcode_ret )
+```
+The return pointer identifies the start of mapped memory on the host. 
+Memory mapping provides a significant improvement in performance over regular read/write operation. 
