--- a/_posts/2018-01-17-OpenCL_2.md
+++ b/_posts/2018-01-17-OpenCL_2.md
@@ -145,3 +145,103 @@ void * clEnqueueMapImage (	cl_command_queue  command_queue ,
 ```
 The return pointer identifies the start of mapped memory on the host. 
 Memory mapping provides a significant improvement in performance over regular read/write operation. 
+
+### 5.3 Memory copy
+```
+cl_int clEnqueueCopyBuffer (	cl_command_queue command_queue,
+ 	cl_mem src_buffer,
+ 	cl_mem dst_buffer,
+ 	size_t src_offset,
+ 	size_t dst_offset,
+ 	size_t size,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+
+cl_int clEnqueueCopyImage (	cl_command_queue command_queue,
+ 	cl_mem src_image,
+ 	cl_mem dst_image,
+ 	const size_t *src_origin,
+ 	const size_t *dst_origin,
+ 	const size_t *region,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+
+cl_int clEnqueueCopyImage (	cl_command_queue command_queue,
+ 	cl_mem src_image,
+ 	cl_mem dst_image,
+ 	const size_t *src_origin,
+ 	const size_t *dst_origin,
+ 	const size_t *region,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+
+cl_int clEnqueueCopyImageToBuffer (	cl_command_queue command_queue,
+ 	cl_mem src_image,
+ 	cl_mem  dst_buffer,
+ 	const size_t *src_origin,
+ 	const size_t *region,
+ 	size_t dst_offset,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+
+cl_int clEnqueueCopyBufferToImage (	cl_command_queue command_queue,
+ 	cl_mem src_buffer,
+ 	cl_mem  dst_image,
+ 	size_t src_offset,
+ 	const size_t *dst_origin,
+ 	const size_t *region,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+
+cl_int clEnqueueCopyBufferRect (	cl_command_queue command_queue,
+ 	cl_mem src_buffer,
+ 	cl_mem dst_buffer,
+ 	const size_t *src_origin,
+ 	const size_t *dst_origin,
+ 	const size_t *region,
+ 	size_t src_row_pitch,
+ 	size_t src_slice_pitch,
+ 	size_t dst_row_pitch,
+ 	size_t dst_slice_pitch,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+```
+
+## 6. Data Partitioning
+The better you distribute the processing load, the sonner your computational tasks will be finished. 
+```
+cl_int clEnqueueNDRangeKernel (	cl_command_queue command_queue,
+ 	cl_kernel kernel,
+ 	cl_uint work_dim,
+ 	const size_t *global_work_offset,
+ 	const size_t *global_work_size,
+ 	const size_t *local_work_size,
+ 	cl_uint num_events_in_wait_list,
+ 	const cl_event *event_wait_list,
+ 	cl_event *event)
+```
+- work_dims: the number of dimensions in the data
+- global_work_offset: the global ID offsets in each dimension
+- global_work_size: the number of work-items in each dimension
+- local_work_size: the number of work-items in a work-group, in each dimension
+
+```
+for (i = 0; i < Z; i++) {
+    for (j = 0; j < Y; j++) {
+        for (k = 0; k < X; k++) {
+            process(point[i][j][k]);
+        }
+    }
+}
+```
+Kernel only executes code that would lie inside the innermost loop->**work_item**
+The array`{i,j,k}` are called **global ID**.The number of elements in a global ID is referred to as the data's **dimensionality**. `clEnqueueNDRangeKernel`
+A **work-group** is a combination of work-items that access the same processing resources. When it comes to programming, work-groups have two main advantages:
+(1): Work-items in a work-group can access the same block of high-speed memory called local memory.
+(2): Work-items in a work-group can be synchronized using fences and barriers. 
