--- a/_posts/2018-01-18-OpenCL_3.md
+++ b/_posts/2018-01-18-OpenCL_3.md
@@ -28,4 +28,83 @@ After the kernel is enqueued and the device executes the function, the host appl
 clEnqueueReadBuffer(queue, msg_buffer, CL_TRUE, 0, sizeof(msg), &msg, 0, NULL, NULL);
 ```
 
-## 2. Scalar data types
+## 2. Vector data types
+Vectors resemble arrays in that they contain multiple elements of the same type. But there are two main differences:
+(1) A vector of a given type can only contain a specific number of elements.
+(2) When a vector is operated upon, every element is operated upon **at the same time**.
+
+```
+float a[4], b[4], c[4];
+for (int i = 0; i < 4; i++) {
+    c[i] = a[i] + b[i];
+}
+float4 a, b, c;
+c = a + b;
+```
+Elements within a vector are called **components**
+vector types:
+`charn, ucharn, shortn, ushortn, intn, uintn, longn, ulongn, floatn`
+The OpenCL standard requires that device compilers know the limitations of the target device and divide large vectors into sizes that the device can operate on. 
+### 2.1 preferred vector width
+`clGetDeviceInfo` accepts a parameter that identifies what information is being sought. 
+```
+cl_uint char_width;
+clGetDeviceInfo(device, CL_DEVICE_PREFERRED_VECTOR_WIDTH_CHAR, sizeof(char_width), &char_width, NULL);
+```
+```
+float4 data_vec = (float4)(1.0, 1.0, 1.0, 1.0);
+float4 data_vec = (float4)(1.0);
+float2 a_vector = (float2)(1.0,1.0);
+float2 b_vector = (float2)(2.0,2.0);
+float4 c_vector = (float4)(a_vector, b_vector);
+```
+### 2.2 Indexing
+#### 2.2.1 Numerb-index
+```
+char16 msg = (char16)('H','e','l','l','o','P','r','o','g','r','a','m','m','e','r','!');
+char a = msg.s0; // a = 'H'
+char d = msg.sC; // 0xC d = 'm'
+char8 e = msg.s01234567; // e = "HelloPro"
+msg.s7E = (char2)(msg.s1);
+msg.s5 = 'O';
+```
+#### 2.2.2 Letter indexing
+```
+float4 coord = (float4)(3.0, 5.0, 7.0, 9.0);
+float a = coord.x; // a = 3
+float2 e = coord.xy; // e = (5.0, 7.0)
+float4 h = coord.wwwx; // h = (11.0, 11.0, 11.0, 5.0)
+coord.x = 2.0;
+```
+####.2.2.3 HI, LO, EVEN, ODD
+```
+ushort8 shorts = (ushort8)(0, 10, 20, 30, 40, 50, 60, 70);
+ushort4 a = shorts.hi; // a = (40, 50, 60, 70)
+ushort4 b = shorts.lo; // b = (0, 10, 20, 30)
+ushort4 c = shorts.even; // c = (0, 20, 40, 60)
+ushort4 d = shorts.odd; // d = (10, 30, 50, 70)
+```
+## 3. Device Model
+global memory: stores data for the entire device and can be read from and written to.-->`__global`
+constant memory: similar to global memory, but is read-only-->`__constant`
+local memory: stores data for the work-item in a work group --> `__local`
+private memory: stores data for an individual work-item
+--> `__private`
+global memory is commonly the largest memory region on an OpenCL compliant device, but it's also the slowest for work-itm to access.
+```
+__kernel void kernel_func(__global float *f) {
+    __global uint* x = 5;
+    f = (global float*)x;
+}
+```
+The `__local` qualifier can be used for kernel arguments and variables declared within a kernel, **but local variables cannot be directly initialized.**
+`__local float x = 4.0` will cause an error.
+Unlike local data, a kernel's private data can be initialized by a host application. To configure this in code, the host needs to make the last parameter of `clSetKernelArg` a pointer to primitive data: `int*`, `float*`, `char*` and so on.
+```
+int num = 4;
+clSetKernelArg(kernel, 0, sizeof(num), &num);
+__kernel void proc_data(int num, ...) {
+
+}
+```
+It has no space specifier like `__global` and `__local`. This means that `num` will be stored in the device's private space and each work item will have its own copy. Second, `num` isn't a pointer, private kernel arg cannot be references, they must be simple primitives like `int` and `float`. 
