add change to comment

--- a/_posts/2018-01-17-OpenCL_2.md
+++ b/_posts/2018-01-17-OpenCL_2.md
@@ -9,6 +9,8 @@ redirect_from:
 ---
 
 ## 1. Kernel Args
+If you wnat a device to perform a nontrivial computing task, you have to provide at least three pieces of information: the instructios to be executed, a buffer containng data to be processed, and a buffer where processed data should be stored. 
+
 ```
 cl_int clSetKernelArg ( cl_kernel kernel,
   cl_uint arg_index,
