add a piece of code

--- a/_posts/2018-01-17-OpenCL_2.md
+++ b/_posts/2018-01-17-OpenCL_2.md
@@ -24,6 +24,13 @@ clSetKernelArg(proc, 0, sizeof(num), &num);
 clSetKernelArg(proc, 0, sizeof(mem_obj), &mem_obj);
 ```
 In OpenCL, memory objects are represented by `cl_mem` data structure, and they come in two types: **buffer objects** and **image objects**. 
+```
+input_buffer = clCreateBuffer(context, CL_MEE_READ_ONLY | CL_MEM_COPY_HOST_PTR, sizeof(input_vector), input_vector, &error);
+output_buffer = clCreateBuffer(context, CL_MEM_WRITE_ONLY, 
+  sizeof(input_vector), &error);
+clSetKernelArg(kernel, 0, sizeof(cl_mem), &input_buffer);
+clSetKernelArg(kernel, 1, sizeof(cl_mem), &output_buffer);
+```
 
 ## 2. Buffer Objects
 Buffer objects package any type of data that doesn't involve images. 
