add double type in OpenCL_3

--- a/_posts/2018-01-18-OpenCL_3.md
+++ b/_posts/2018-01-18-OpenCL_3.md
@@ -27,8 +27,26 @@ After the kernel is enqueued and the device executes the function, the host appl
 ```
 clEnqueueReadBuffer(queue, msg_buffer, CL_TRUE, 0, sizeof(msg), &msg, 0, NULL, NULL);
 ```
+## 2. Double type
+The double data type can be accessed if the device supports the `cl_khr_fp64` extension. From the host, you can determine whether this extension is available by calling `clGetDeviceInfo`. If the extension is supported, you can enable this capability in the kernel with the following `pragma` statement:
+`#pragma OPENCL EXTENSION cl_khr_fp64 : enable`
+Here is one code example:
+```
+#ifdef FP_64
+#pragma OPENCL EXTENSION cl_khr_fp64 : enable
+#endif 
 
-## 2. Vector data types
+__kernel void double_test(__global float* a, __global float* b, 
+						  __global float* out) {
+#ifdef FP_64
+	double c = (double)(*a / *b);
+	*out = (float)c;
+#else
+	*out = *a * *b;
+#endif
+}
+```
+## 3. Vector data types
 Vectors resemble arrays in that they contain multiple elements of the same type. But there are two main differences:
 (1) A vector of a given type can only contain a specific number of elements.
 (2) When a vector is operated upon, every element is operated upon **at the same time**.
@@ -45,7 +63,7 @@ Elements within a vector are called **components**
 vector types:
 `charn, ucharn, shortn, ushortn, intn, uintn, longn, ulongn, floatn`
 The OpenCL standard requires that device compilers know the limitations of the target device and divide large vectors into sizes that the device can operate on. 
-### 2.1 preferred vector width
+### 3.1 preferred vector width
 `clGetDeviceInfo` accepts a parameter that identifies what information is being sought. 
 ```
 cl_uint char_width;
@@ -58,8 +76,8 @@ float2 a_vector = (float2)(1.0,1.0);
 float2 b_vector = (float2)(2.0,2.0);
 float4 c_vector = (float4)(a_vector, b_vector);
 ```
-### 2.2 Indexing
-#### 2.2.1 Numerb-index
+### 3.2 Indexing
+#### 3.2.1 Numerb-index
 ```
 char16 msg = (char16)('H','e','l','l','o','P','r','o','g','r','a','m','m','e','r','!');
 char a = msg.s0; // a = 'H'
@@ -68,7 +86,7 @@ char8 e = msg.s01234567; // e = "HelloPro"
 msg.s7E = (char2)(msg.s1);
 msg.s5 = 'O';
 ```
-#### 2.2.2 Letter indexing
+#### 3.2.2 Letter indexing
 ```
 float4 coord = (float4)(3.0, 5.0, 7.0, 9.0);
 float a = coord.x; // a = 3
@@ -76,7 +94,7 @@ float2 e = coord.xy; // e = (5.0, 7.0)
 float4 h = coord.wwwx; // h = (11.0, 11.0, 11.0, 5.0)
 coord.x = 2.0;
 ```
-####.2.2.3 HI, LO, EVEN, ODD
+#### 3.2.3 HI, LO, EVEN, ODD
 ```
 ushort8 shorts = (ushort8)(0, 10, 20, 30, 40, 50, 60, 70);
 ushort4 a = shorts.hi; // a = (40, 50, 60, 70)
@@ -84,7 +102,7 @@ ushort4 b = shorts.lo; // b = (0, 10, 20, 30)
 ushort4 c = shorts.even; // c = (0, 20, 40, 60)
 ushort4 d = shorts.odd; // d = (10, 30, 50, 70)
 ```
-## 3. Device Model
+## 4. Device Model
 global memory: stores data for the entire device and can be read from and written to.-->`__global`
 constant memory: similar to global memory, but is read-only-->`__constant`
 local memory: stores data for the work-item in a work group --> `__local`
