add new material

--- a/_posts/2018-01-18-OpenCL_3.md
+++ b/_posts/2018-01-18-OpenCL_3.md
@@ -103,12 +103,18 @@ ushort4 c = shorts.even; // c = (0, 20, 40, 60)
 ushort4 d = shorts.odd; // d = (10, 30, 50, 70)
 ```
 ## 4. Device Model
+compute unit: processing core. 
+each compute unit can be occupied by a work-group. 
+There are many work-item in one work-group. 
 global memory: stores data for the entire device and can be read from and written to.-->`__global`
 constant memory: similar to global memory, but is read-only-->`__constant`
 local memory: stores data for the work-item in a work group --> `__local`
 private memory: stores data for an individual work-item
 --> `__private`
+`global/const` memory can be read from and written to by both host and device. 
+When the host apllication transfer a buffer object to the device, the buffer's data is stored in `global/constant` memory. 
 global memory is commonly the largest memory region on an OpenCL compliant device, but it's also the slowest for work-itm to access.
+Work-items can access local memory much faster (~100x) than they can access global/constant emmory. (help to store intermidiate result)
 ```
 __kernel void kernel_func(__global float *f) {
     __global uint* x = 5;
@@ -116,7 +122,20 @@ __kernel void kernel_func(__global float *f) {
 }
 ```
 The `__local` qualifier can be used for kernel arguments and variables declared within a kernel, **but local variables cannot be directly initialized.**
-`__local float x = 4.0` will cause an error.
+`__local float x = 4.0` will cause an error. You should uuse `__local float x; x = 4.0`
+
+### 4.1 Memory Alignment
+You can control data alignment with the `aligned` attribute, which can only beused when the data is declared. The `aligned` keyword must be preceded by `__attribute__`:
+```
+short x __attribute__ ((aligned(4)))
+```
+### 4.2 Local and Private Kernel Arguments
+```
+clSetKernelArg(cl_kernel kernel, cl_uint index, size_t size, const void* value);
+```
+`value` identifies the data that will be sent to the device as a kernel argument. So far, the example code has always set this to point to a memory object, adn the corresponding kernel argument must be decalred as `__global` or `__constant`. 
+If you transfer data to a kernel using a memory object, you cannot set the kernel argument specifier to `__local`. If you attempt to do this, you will receive a runtime error whose code is `-50`: `CL_INVALID_ARG_VALUE`. Since host cannot access local memory directly. 
+
 Unlike local data, a kernel's private data can be initialized by a host application. To configure this in code, the host needs to make the last parameter of `clSetKernelArg` a pointer to primitive data: `int*`, `float*`, `char*` and so on.
 ```
 int num = 4;
