--- a/_posts/2018-01-18-OpenCL_3.md
+++ b/_posts/2018-01-18-OpenCL_3.md
@@ -135,6 +135,14 @@ clSetKernelArg(cl_kernel kernel, cl_uint index, size_t size, const void* value);
 ```
 `value` identifies the data that will be sent to the device as a kernel argument. So far, the example code has always set this to point to a memory object, adn the corresponding kernel argument must be decalred as `__global` or `__constant`. 
 If you transfer data to a kernel using a memory object, you cannot set the kernel argument specifier to `__local`. If you attempt to do this, you will receive a runtime error whose code is `-50`: `CL_INVALID_ARG_VALUE`. Since host cannot access local memory directly. 
+But a host can tell the device to allocate local memory for a kernel argument by setting the last argument of `clSetKernelArg` to `NULL`. 
+```
+clSetKernelArg(kernel, 0, 16 * sizeof(float), NULL);
+__kernel void proc_data(__local float* nums, ...)
+{
+
+}
+```
 
 Unlike local data, a kernel's private data can be initialized by a host application. To configure this in code, the host needs to make the last parameter of `clSetKernelArg` a pointer to primitive data: `int*`, `float*`, `char*` and so on.
 ```
@@ -145,3 +153,12 @@ __kernel void proc_data(int num, ...) {
 }
 ```
 It has no space specifier like `__global` and `__local`. This means that `num` will be stored in the device's private space and each work item will have its own copy. Second, `num` isn't a pointer, private kernel arg cannot be references, they must be simple primitives like `int` and `float`. 
+
+Private kernel arguments must be primitives, but they don't have to be scalars.
+```
+float nums[4] = { 0.0f, 1.0f, 2.0f, 3.0f };
+clSetKernelArg(kernel, 0, sizeof(nums), nums);
+__kernel void proc_data(float4 values, ...) {
+
+}
+```
