--- a/_posts/2018-01-18-OpenCL_4.md
+++ b/_posts/2018-01-18-OpenCL_4.md
@@ -8,16 +8,24 @@ redirect_from:
   - /2018/01/18/
 ---
 
-## 1. Work-itrem and Work-group
-### 1.1 Dimensions and work-items
-A work-itm is a single implementation of a kernel, and each work-item has an identifier that distinguishes it from every other work-itm that processes the kernel. This identifier, called the global ID, is an array of unsigned integers. 
+## 1. Operator
+The relational operators tests all components of a vector and the components of the resulting vector identify whether the corresponding test returned true or false. 
+For vector components, truth is represented by all 1s (`0xFF, 0xFFFF, 0xFFFFFFFF`), openCL represents signed integers using their two's componnets . So the signed value for true is `-1` not `1`. 
+If `x` is a vector, you cannot use `if (x > 0)`, this will generate compile time error. 
+However, you can test individual components:
+`if (x.s0 > 2 && x.s1 > 2)`, or use `any` or `all` function:
+`while(all(x > 2))`
+
+## 2. Work-itrem and Work-group
+### 2.1 Dimensions and work-items
+A work-item is a single implementation of a kernel, and each work-item has an identifier that distinguishes it from every other work-itm that processes the kernel. This identifier, called the global ID, is an array of unsigned integers. 
 ```
 uint get_work_dim();
 size_t get_global_size(unit dim);
 size_t get_global_id(uint dim);
 size_t get_global_offset(uint dim);
 ```
-### 1.2 Work-groups
+### 2.2 Work-groups
 Work-group become important when work-items need to synchronize their execution. 
 ```
 size_t get_num_groups(uint dim);
@@ -25,8 +33,9 @@ size_t get_group_id(uint dim);
 size_t get_local_id(uint dim);
 size_t get_local_size(uint dim);
 ```
-## 2. Data Transfer
-### 2.1 Transfer same type
+
+## 3. Data Transfer
+### 3.1 Transfer same type
 ```
 __kernel void test (__global int4 *int_data, __global int4* out_data) {
     __local int4 local_data;
@@ -36,7 +45,7 @@ __kernel void test (__global int4 *int_data, __global int4* out_data) {
     out_data[id] = local_data;
 }
 ```
-### 2.2 Load vector from scalar array
+### 3.2 Load vector from scalar array
 ```
 vector vloadn(size_t offset, const __(g|c|l|p) scalar* mem)
 ```
