add material on OpenCL_4

--- a/_posts/2018-01-18-OpenCL_4.md
+++ b/_posts/2018-01-18-OpenCL_4.md
@@ -25,6 +25,16 @@ size_t get_global_size(unit dim);
 size_t get_global_id(uint dim);
 size_t get_global_offset(uint dim);
 ```
+
+```
+for (int i= 3; i < 9; i++) {
+	for (int j = 5; j < 9; j++) {
+		process(data(i,j));
+	}
+}
+```
+The loop pair is `(3,5)`, and a work-item can obtain its ID by calling `get_global_id(0)` and `get_global_id(1)`. In the nested loop, the index pair of the first iteration is `(3,5)`. This corresponding to OpenCL's global offset, which is the first global ID given to a work-item. A work-item can access this by calling `get_global_offset(0)` and `get_global_offset(1)`. 
+
 ### 2.2 Work-groups
 Work-group become important when work-items need to synchronize their execution. 
 ```
@@ -32,6 +42,40 @@ size_t get_num_groups(uint dim);
 size_t get_group_id(uint dim);
 size_t get_local_id(uint dim);
 size_t get_local_size(uint dim);
+```
+`get_global_id` identifies a work-item among all other work-items executing the kernel. But `get_local_id` identifies the work-item only among work-items in the same work-group. Similarly, `get_gloal_size` will tell you how many work-items are executing the same kernel. `get_local_size` tells you how many work-items are in the same work-group as the calling work-item. 
+One example:
+```
+__kernel void id_check(__global float *output) { 
+
+   /* Access work-item/work-group information */
+   size_t global_id_0 = get_global_id(0);
+   size_t global_id_1 = get_global_id(1);
+   size_t global_size_0 = get_global_size(0);
+   size_t offset_0 = get_global_offset(0);
+   size_t offset_1 = get_global_offset(1);
+   size_t local_id_0 = get_local_id(0);
+   size_t local_id_1 = get_local_id(1);
+
+   /* Determine array index */
+   int index_0 = global_id_0 - offset_0;
+   int index_1 = global_id_1 - offset_1;
+   int index = index_1 * global_size_0 + index_0;
+   
+   /* Set float data */
+   float f = global_id_0 * 10.0f + global_id_1 * 1.0f;
+   f += local_id_0 * 0.1f + local_id_1 * 0.01f;
+
+   output[index] = f;
+}
+```
+```
+result:
+$ ./Ch5_id_check.exe
+35.00     45.10     55.20     65.00     75.10     85.20
+36.01     46.11     56.21     66.01     76.11     86.21
+37.00     47.10     57.20     67.00     77.10     87.20
+38.01     48.11     58.21     68.01     78.11     88.21
 ```
 
 ## 3. Data Transfer
