--- a/_posts/2018-01-18-OpenCL_4.md
+++ b/_posts/2018-01-18-OpenCL_4.md
@@ -93,8 +93,15 @@ __kernel void test (__global int4 *int_data, __global int4* out_data) {
 ```
 vector vloadn(size_t offset, const __(g|c|l|p) scalar* mem)
 ```
-`n` identifies the number of components in the returned vector. 
+`n` identifies the number of components in the returned vector and it must be set to 2, 3, 4, 8, 16. The offset argument determines which elements of the array are placed in the vector. **This is given in terms of the size of the `vector`, not the size of it scalar components.**
 ```
 void vstoren(vector vec, size_t offset, __(g|l|p) scalar* mem)
 ```
 Just as `vloadn` transfer data from a scalar array to a vector, `vstoren` transfer data from a vector to a scalar array. 
+### 3.3 Store vectors to a scalar array
+`vstoren` transfer data from a vector to a scalar array. 
+```
+void vstoren(vector vec, size_t offset, __(g|l|p) scalar *mem);
+```
+
+## 4. Shuffle and select functions
