--- a/_posts/2018-01-18-OpenCL_4.md
+++ b/_posts/2018-01-18-OpenCL_4.md
@@ -105,3 +105,16 @@ void vstoren(vector vec, size_t offset, __(g|l|p) scalar *mem);
 ```
 
 ## 4. Shuffle and select functions
+Two shuffle functions rely on index values inside the mask vector to create the output, and the two select functions rely on bits inside the mask vector. 
+
+### 4.1 Shuffle function
+
+```
+allm shuffle(alln x, uintegrem mask);
+allm shuffle2(alln x, alln y, unitegrem mask);
+```
+The `shuffle` function creates a vector whose components are taken from those in the input `x` vector, and `shuffle2` creates a vector from componnets in `x` and `y`. The size of the components of the mask vector must be the same size as those of the returned vector. But the data type must be an unsingned integer. 
+![openCL_4_1](https://raw.githubusercontent.com/Aperjump/Aperjump.github.io/master/_picture/2018-01-18-OpenCL_4/OpenCL_4_1.PNG)
+
+`shuffle2` version:
+![openCL_4_2](https://raw.githubusercontent.com/Aperjump/Aperjump.github.io/master/_picture/2018-01-18-OpenCL_4/OpenCL_4_2.PNG)
