--- a/_posts/2018-01-18-OpenCL_4.md
+++ b/_posts/2018-01-18-OpenCL_4.md
@@ -118,3 +118,43 @@ The `shuffle` function creates a vector whose components are taken from those in
 
 `shuffle2` version:
 ![openCL_4_2](https://raw.githubusercontent.com/Aperjump/Aperjump.github.io/master/_picture/2018-01-18-OpenCL_4/OpenCL_4_2.PNG)
+
+```
+__kernel void shuffle_test(__global float8 *s1, 
+                           __global char16 *s2) {
+
+   /* Execute the first example */
+   uint8 mask1 = (uint8)(1, 2, 0, 1, 3, 1, 2, 3);
+   float4 input = (float4)(0.25f, 0.5f, 0.75f, 1.0f);
+   *s1 = shuffle(input, mask1); 
+   
+   /* Execute the second example */
+   uchar16 mask2 = (uchar16)(6, 10, 5, 2, 8, 0, 9, 14, 
+                             7, 5, 12, 3, 11, 15, 1, 13);
+   char8 input1 = (char8)('l', 'o', 'f', 'c', 'a', 'u', 's', 'f');
+   char8 input2 = (char8)('f', 'e', 'h', 't', 'n', 'n', '2', 'i');
+   *s2 = shuffle2(input1, input2, mask2); 
+}
+```
+
+### 4.2 select function
+```
+alln select(alln a , alln b, u/integern mask)
+```
+```
+__kernel void select_test(__global float4 *s1, 
+                          __global uchar2 *s2) {
+
+   /* Execute select */
+   int4 mask1 = (int4)(-1, 0, -1, 0);
+   float4 input1 = (float4)(0.25f, 0.5f, 0.75f, 1.0f);
+   float4 input2 = (float4)(1.25f, 1.5f, 1.75f, 2.0f);
+   *s1 = select(input1, input2, mask1); 
+   
+   /* Execute bitselect */
+   uchar2 mask2 = (uchar2)(0xAA, 0x55);
+   uchar2 input3 = (uchar2)(0x0F, 0x0F);
+   uchar2 input4 = (uchar2)(0x33, 0x33);
+   *s2 = bitselect(input3, input4, mask2); 
+}
+```
