--- a/_posts/2018-01-26-OpenCL_5.md
+++ b/_posts/2018-01-26-OpenCL_5.md
@@ -1,47 +1,23 @@
 ---
 layout: post
-title: "OpenCL notes_4 operators and functions"
-description: "OpenCL notes_4 operators and functions"
+title: "OpenCL notes_5 Event, Profiling, and Synchronization"
+description: "OpenCL notes_5 Event, Profiling, and Synchronization"
 categories: [OpenCL]
 tags: [parallel, OpenCL]
 redirect_from:
   - /2018/01/26/
 ---
 
-## 1. Work-itrem and Work-group
-### 1.1 Dimensions and work-items
-A work-itm is a single implementation of a kernel, and each work-item has an identifier that distinguishes it from every other work-itm that processes the kernel. This identifier, called the global ID, is an array of unsigned integers. 
+In openCL, an event is a data structure that corresponds too an occurence. One event migh monitor the completion of a data transfer operation and another might monitor the execution of a kernel. 
+- host notification
+- command synchronization
+- profiling
+
+## 1. Host Notification
+After the host enqueues a command, it has no controal over how the command will be processed, but it can receive notification when the command completes its execution. --> `cl_event`
+For example, when the data transfer is complete, you may want the host application to respond by processing the data. 
+You need to assocaite the event with the data transfer command. Then you need to associate the event with a function to be called on the host when the transfer command finishes. -->`callback function`
 ```
-uint get_work_dim();
-size_t get_global_size(unit dim);
-size_t get_global_id(uint dim);
-size_t get_global_offset(uint dim);
+cl_event ev;
+clEnqueueTask(queue, kernel, 0, NULL, &ev);
 ```
-### 1.2 Work-groups
-Work-group become important when work-items need to synchronize their execution. 
-```
-size_t get_num_groups(uint dim);
-size_t get_group_id(uint dim);
-size_t get_local_id(uint dim);
-size_t get_local_size(uint dim);
-```
-## 2. Data Transfer
-### 2.1 Transfer same type
-```
-__kernel void test (__global int4 *int_data, __global int4* out_data) {
-    __local int4 local_data;
-    int id = get_local_id(0);
-    local_data = in_data[id];
-    ...
-    out_data[id] = local_data;
-}
-```
-### 2.2 Load vector from scalar array
-```
-vector vloadn(size_t offset, const __(g|c|l|p) scalar* mem)
-```
-`n` identifies the number of components in the returned vector. 
-```
-void vstoren(vector vec, size_t offset, __(g|l|p) scalar* mem)
-```
-Just as `vloadn` transfer data from a scalar array to a vector, `vstoren` transfer data from a vector to a scalar array. 
