--- a/_posts/2018-01-26-OpenCL_5.md
+++ b/_posts/2018-01-26-OpenCL_5.md
@@ -20,4 +20,37 @@ You need to assocaite the event with the data transfer command. Then you need to
 ```
 cl_event ev;
 clEnqueueTask(queue, kernel, 0, NULL, &ev);
+cl_int clSetEventCallback(cl_event event, cl_int callback_type, void (CL_CALLBACK *func_name) (cl_event, cl_int status, void *data), void* data);
+```
+The second arg `callback_type` identifies the type of command status you're interested in monitoring. `CL_COMPLETE`. 
+```
+clsetEventCallback(ev, CL_COMPLETE, &process, NULL);
+void CL_CALLBACK func_name(cl_event event, cl_int status, void* data);
+```
+It's important to remember that `clSetEventCallback` must be called **after** the command enqueueing functions, else you will receive a segmentation fault. 
+```
+/* Enqueue kernel */
+err = clEnqueueTask(queue, kernel, 0, NULL, &kernel_event);
+if(err < 0) {
+  perror("Couldn't enqueue the kernel");
+  exit(1);   
+}
+
+/* Read the buffer */
+err = clEnqueueReadBuffer(queue, data_buffer, CL_FALSE, 0, 
+  sizeof(data), &data, 0, NULL, &read_event);
+if(err < 0) {
+  perror("Couldn't read the buffer");
+  exit(1);   
+}
+
+/* Set event handling routines */
+kernel_msg = "The kernel finished successfully.\n\0";
+err = clSetEventCallback(kernel_event, CL_COMPLETE, 
+     &kernel_complete, kernel_msg);
+if(err < 0) {
+  perror("Couldn't set callback for event");
+  exit(1);   
+}
+clSetEventCallback(read_event, CL_COMPLETE, &read_complete, data);
 ```
