--- a/_posts/2018-01-26-OpenCL_5.md
+++ b/_posts/2018-01-26-OpenCL_5.md
@@ -137,3 +137,37 @@ read_time = time_end - time_start;
 ```
 
 ## 4. Work-item Synchronization
+openCL provides two kinds of synchronization: command synchronization and work-item synchronization. 
+### 4.1 Barrier and Fences
+`int barrier (cl_mem_fence_flags flags)` forces a work-item until every other work-item in the group reaches the barrier. By creating a barrier, you can make sure that every work-itm has reached the same point in its processing. 
+The `ClK_LOCAL_MEM_FENCE` flag specifies that the barrier will affect memory operations related to the work-group's local memory. 
+Fences are similar to barriers, but they make it possible to synchronize specific memory operations.
+```
+void read_mem_fence(cl_mem_fence_flags flags);
+void write_mem_fence(cl_mem_fence_flags flags);
+void mem_fence(cl_mem_fence_flags flags);
+// stalls further read/write operations until every preceding read/write operation has completed.
+```
+
+### 4.2 Atomic operation
+```
+__kernel void atomic(__global int* x) {
+	__local int a, b;
+	a = 0;
+	b = 0;
+	a++;
+	atomic_inc(&b);
+	x[0] = a;
+	x[1] = b;
+}
+```
+``` 
+if (atomic_cmpxchg(&mutex, 0, 1) == 0) {
+	process_critical_data();
+	atomic_xchg(&mutex, 0);
+}
+```
+### 4.3 Asynchronous data transfer
+Transfer data between local and global memory:
+--> **asynchronous data transfer**
+![openCL_5](https://raw.githubusercontent.com/Aperjump/Aperjump.github.io/master/_picture/2018-01-18-OpenCL_4/OpenCL_4_3.PNG)
