--- a/_posts/2018-01-31-OpenCL_8.md
+++ b/_posts/2018-01-31-OpenCL_8.md
@@ -90,3 +90,107 @@ First, you need to wrap two functions for selecting platform and device. There a
 		return devices[offset];
 	}
 ```
+Then you can declare one config class interface like this:
+```
+	class CL_Base {
+	public:
+		CL_Base(const std::string& pltform_name) { _platform = ww_matrix::choose_platform(pltform_name); }
+		CL_Base(cl_platform_id platform) : _platform(platform) { }
+		CL_Base(CL_Base& other) : _platform(other._platform),
+			current_device(other.current_device), _devices(other._devices),
+			_context(other._context), _cmdque(other._cmdque), _program(other._program) { }
+		CL_Base& operator= (const CL_Base& other);
+		~CL_Base() { }
+		bool init(const std::string& device_type, cl_command_queue_properties queue_prop, 
+			const cl_context_properties* additional_context_props);
+		cl_device_id switch_device(int offset);
+		bool create_program(const std::string& file);
+		//bool create_kernels();
+
+		cl_platform_id _platform;
+		cl_device_id current_device;
+		std::vector<cl_device_id> _devices;
+		cl_context _context;
+		cl_command_queue _cmdque;
+		cl_program _program;
+		//cl_kernel* _kernels;
+		//cl_uint kernel_num;
+	};
+```
+The reason here is I want to compile program when calling matrix multiplication function but kernel program should be build in the class. 
+But maybe compile all the kernel at this stage and use a sort of searching method during run time can also be one good choice. 
+I will provide serveral function implementations:
+```
+bool CL_Base::init(const std::string& device_type, cl_command_queue_properties queue_prop = 0,
+		const cl_context_properties* additional_context_props = 0) {
+		cl_int err = 0;
+		_devices = ww_matrix::choose_mult_device(_platform, device_type);
+		current_device = _devices[0];
+		char deviceName[1024];
+		clGetDeviceInfo(current_device, CL_DEVICE_NAME, 1024, deviceName, NULL);
+		printf("%s\n", deviceName);
+		_context = clCreateContext(NULL, 1, &current_device, NULL, NULL, &err);
+		if (err < 0) {
+			perror("create context error\n");
+			return false;
+		}
+		_cmdque = clCreateCommandQueue(_context, current_device, NULL, &err);
+		if (err < 0) {
+			perror("create command queue error\n");
+			return false;
+		}
+		return true;
+	}
+	cl_device_id CL_Base::switch_device(int offset) {
+		current_device = _devices[offset]; 
+		cl_int err = 0;
+		_context = clCreateContext(NULL, 1, &current_device, NULL, NULL, &err);
+		if (err < 0) {
+			perror("create context error\n");
+		}
+		_cmdque = clCreateCommandQueue(_context, current_device, NULL, &err);
+		if (err < 0) {
+			perror("create command queue error\n");
+		}
+		return current_device; 
+	}
+	bool CL_Base::create_program(const std::string& file) {
+		std::fstream kernelfile(file.c_str(), std::fstream::in | std::fstream::out);
+		std::string content((std::istreambuf_iterator<char>(kernelfile)),
+			std::istreambuf_iterator<char>());
+		size_t program_size = content.size();
+		const char * kernel = (char*)malloc(content.size());
+		kernel = content.c_str();
+		cl_int err = 0;
+		_program = clCreateProgramWithSource(_context, 1, (const char**)&kernel,
+			&program_size, &err);
+		if (err < 0) {
+			perror("create program error");
+			return false;
+		}
+		size_t log_size = 0;
+		char* program_log;
+		err = clBuildProgram(_program, 0, NULL, NULL, NULL, NULL);
+		if (err < 0) {
+			/* Find size of log and print to std output */
+			clGetProgramBuildInfo(_program, current_device, CL_PROGRAM_BUILD_LOG,
+				0, NULL, &log_size);
+			program_log = (char*)malloc(log_size + 1);
+			program_log[log_size] = '\0';
+			clGetProgramBuildInfo(_program, current_device, CL_PROGRAM_BUILD_LOG,
+				log_size + 1, program_log, NULL);
+			printf("%s\n", program_log);
+			free(program_log);
+			exit(1);
+		}
+		clGetProgramBuildInfo(_program, current_device, CL_PROGRAM_BUILD_LOG,
+			0, NULL, &log_size);
+		program_log = (char*)malloc(log_size + 1);
+		program_log[log_size] = '\0';
+		clGetProgramBuildInfo(_program, current_device, CL_PROGRAM_BUILD_LOG,
+			log_size + 1, program_log, NULL);
+		printf("%s\n", program_log);
+		free(program_log);
+		return true;
+	}
+```
