--- a/_posts/2018-11-11-V8.md
+++ b/_posts/2018-11-11-V8.md
@@ -68,20 +68,14 @@ smi: small integer
 goal: identify dead regions
 live object: pointed to by a root object or another live object. 
 
-**root object** are live by definition(objects pointed directly by V8 or web browser)
+- **root object** are live by definition(objects pointed directly by V8 or web browser)
 heap organization
-
-**New-space**: Most objects are allocated here. New-space is small and is designed to be garbage collected very quickly, independent of other spaces.
-
-**Old-pointer-space**: Contains most objects which may have pointers to other objects. Most objects are moved here after surviving in new-space for a while.
-
-**Old-data-space**: Contains objects which just contain raw data (no pointers to other objects). Strings, boxed numbers, and arrays of unboxed doubles are moved here after surviving in new-space for a while.
-
-**Large-object-space**: This space contains objects which are larger than the size limits of other spaces. Each object gets its own mmap'd region of memory. Large objects are never moved by the garbage collector.
-
-**Code-space**: Code objects, which contain JITed instructions, are allocated here. This is the only space with executable memory (although Codes may be allocated in large-object-space, and those are executable, too).
-
-**Cell-space, property-cell-space and map-space**: These spaces contain Cells, PropertyCells, and Maps, respectively. Each of these spaces contains objects which are all the same size and has some constraints on what kind of objects they point to, which simplifies collection.
+- **New-space**: Most objects are allocated here. New-space is small and is designed to be garbage collected very quickly, independent of other spaces.
+- **Old-pointer-space**: Contains most objects which may have pointers to other objects. Most objects are moved here after surviving in new-space for a while.
+- **Old-data-space**: Contains objects which just contain raw data (no pointers to other objects). Strings, boxed numbers, and arrays of unboxed doubles are moved here after surviving in new-space for a while.
+- **Large-object-space**: This space contains objects which are larger than the size limits of other spaces. Each object gets its own mmap'd region of memory. Large objects are never moved by the garbage collector.
+- **Code-space**: Code objects, which contain JITed instructions, are allocated here. This is the only space with executable memory (although Codes may be allocated in large-object-space, and those are executable, too).
+- **Cell-space, property-cell-space and map-space**: These spaces contain Cells, PropertyCells, and Maps, respectively. Each of these spaces contains objects which are all the same size and has some constraints on what kind of objects they point to, which simplifies collection.
 
  To take advantage of this behavior, V8 divides the heap into two generations. Objects are allocated in new-space, which is fairly small (between 1 and 8 MB, depending on behavior heuristics). Allocation in new space is very cheap: we just have an allocation pointer which we increment whenever we want to reserve space for a new object.
  Objects which have survived two minor garbage collections are promoted to old-space. Old-space is garbage collected during a mark-sweep or mark-compact (major garbage collection cycle), which is much less frequent.
